<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group
    android:id="@+id/menu_top"
    android:checkableBehavior="single">
    <item
      android:checked="true"
      android:id="@+id/drawer_store_notes_to_file"
      android:icon="@drawable/ic_import_export"
      android:title="@string/export_notes_to_file"/>
    <item
      android:id="@+id/drawer_load_notes_from_file"
      android:icon="@drawable/ic_import_export"
      android:title="@string/import_notes_from_file"/>
  </group>
  <group
    android:id="@+id/select_menu_filter"
    android:checkableBehavior="single">
    <item
      android:checked="true"
      android:id="@+id/drawer_select_filter"
      android:icon="@drawable/ic_tune_black_24dp"
      android:title="@string/select_filter"/>
  </group>
</menu>