<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="com.awesoon.thirdtask.activity.FilterEditorActivity"
  tools:showIn="@layout/activity_filter_editor">

  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingBottom="@dimen/form_margin"
      android:paddingLeft="@dimen/form_margin"
      android:paddingRight="@dimen/form_margin"
      android:paddingTop="@dimen/form_margin"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0">

      <android.support.design.widget.TextInputLayout
        android:id="@+id/filter_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/filter_name"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:hint="@string/filter_name_hint"/>
      </android.support.design.widget.TextInputLayout>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:text="@string/sort_order"
        android:textSize="16sp"/>

      <android.support.v7.widget.RecyclerView
        android:id="@+id/orders_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      </android.support.v7.widget.RecyclerView>

      <Button
        android:id="@+id/add_new_order"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_order"
        android:textColor="@color/white"/>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/created_date_start_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/created_date_start_filter"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:focusable="false"
          android:hint="@string/created_date_start_hint"
          android:inputType="date"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/created_date_end_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/created_date_end_filter"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:focusable="false"
          android:hint="@string/created_date_end_hint"
          android:inputType="date"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/edited_date_start_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/edited_date_start_filter"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:focusable="false"
          android:hint="@string/edited_date_start_hint"
          android:inputType="date"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/edited_date_end_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/edited_date_end_filter"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:focusable="false"
          android:hint="@string/edited_date_end_hint"
          android:inputType="date"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/viewed_date_start_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/viewed_date_start_filter"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:focusable="false"
          android:hint="@string/viewed_date_start_hint"
          android:inputType="date"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/viewed_date_end_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/viewed_date_end_filter"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:focusable="false"
          android:hint="@string/viewed_date_end_hint"
          android:inputType="date"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.v7.widget.RecyclerView
        android:id="@+id/filtered_colors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal">

      </android.support.v7.widget.RecyclerView>

      <Button
        android:id="@+id/add_new_color"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_color"
        android:textColor="@color/white"/>
    </LinearLayout>
  </ScrollView>
</android.support.constraint.ConstraintLayout>
